--- a/projects/crud/src/lib/components/foreign-key-filed-multiple/foreign-key-filed-multiple.component.html
+++ b/projects/crud/src/lib/components/foreign-key-filed-multiple/foreign-key-filed-multiple.component.html
@@ -1,11 +1,11 @@
-<mat-form-field class="example-chip-list" style="width: 90%;">
+<mat-form-field class="example-chip-list" >
   <mat-chip-list #chipList aria-label="Fruit selection">
     <mat-chip
       *ngFor="let result of selected_results"
       [selectable]="selectable"
       [removable]="removable"
       (removed)="remove(result)">
-      {{result}}
+      {{result[controlConfig.metadata.optionName]}}
       <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
     </mat-chip>
     <input
