--- a/projects/crud/src/lib/containers/screen-wrapper/screen-wrapper.component.html
+++ b/projects/crud/src/lib/containers/screen-wrapper/screen-wrapper.component.html
@@ -1,4 +1,4 @@
-<div #dynamicComponentContainer>
+<div #dynamicComponentContainer class="crud_container">
 </div>
 <!-- 
 <section class="app-settings" *ngIf="modelName">
