--- a/projects/docs/src/app/app.component.css
+++ b/projects/docs/src/app/app.component.css
@@ -20,11 +20,8 @@
     padding-left: 12px;
     color: rgba(0, 0, 0, 0.3);
     text-transform: uppercase;
-    font-family: 'Roboto';
     letter-spacing: -1px !important;
-    margin-bottom: 0px;
-    font-size: 12px;
-}
+    margin-bottom: 0px;}
 
 .mat-sidenav-content {
     /* padding-top: 24px;
@@ -48,7 +45,5 @@
 }
 
 .sidenav-link {
-    font-family: 'Roboto';
     color: rgba(0, 0, 0, 0.65);
-    font-size: 16px;
 }
